# node-windows-audio-visualisation

./: Cargo.toml  README.md  README_CN.md  index.d.ts  index.js  index.mjs  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
example/: index.js  index.mjs  index.ts
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: fft.rs  lib.rs  listener.rs  monitor.rs  types.rs  utils.rs
src/wasapi/: audio_client.rs  device.rs  errors.rs  events.rs  mod.rs  types.rs  utils.rs  wave_format.rs
