[package]
edition = "2021"
name = "windows-audio-visualisation"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "2.0.9"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rustfft = "6.2.0"
windows-core = "0.59"
widestring = "1.1.0"
log = "0.4.22"
num-integer = "0.1"
num-complex = "0.4.3"

[dependencies.windows]
version = "0.59"
features = [
  "Foundation",
  "Win32_Media_Audio",
  "Win32_Foundation",
  "Win32_Devices_FunctionDiscovery",
  "Win32_Devices_Properties",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_KernelStreaming",
  "Win32_Media_Multimedia",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_Security",
]

[dependencies.dasp]
version = "0.11.0"
features = ["all"]

[dev-dependencies]
rand = "0.8.5"
sysinfo = "0.33.1"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
